--- a/practica 2/estilos.css
+++ b/practica 2/estilos.css
@@ -86,6 +86,16 @@ body {
    
         
 }
+.Ficha-Adri{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #05545A;
+    width: 400px;
+    display: block 40px;
+    margin: auto;
+    border: #540851 8px double;
+    text-align: center;
+    color: azure;
+}
 .Ficha-angel{
     font-family :Century Gothic, sans-serif;
     background-color:rgb(24, 13, 53);
